# liste_rappel

./: .env.example  .gitignore  README.md  codex.patch  pyproject.toml
liste_rappel/: config.py  http.py  notifier.py  parser.py  state.py  watcher.py
